--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+@import url("https://use.typekit.net/vjs5ukg.css");
 
 // Variables
 @import "variables";
@@ -10,26 +10,3 @@
 @import "~font-awesome/scss/font-awesome";
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css";
 
-
-@font-face {
-    font-family: 'lato';
-    src: url('/fonts/jager/Lato-Regular.eot'); /* IE9 Compat Modes */
-    src: url('/fonts/jager/Lato-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/fonts/jager/Lato-Regular.woff2') format('woff2'), /* Modern Browsers */
-         url('/fonts/jager/Lato-Regular.woff') format('woff'), /* Modern Browsers */
-         url('/fonts/jager/Lato-Regular.ttf') format('truetype');
-    font-style: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
-}
-
-@font-face {
-    font-family: 'meister';
-    src: url('/fonts/jager/Meister-Bold.eot'); /* IE9 Compat Modes */
-    src: url('/fonts/jager/Meister-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/fonts/jager/Meister-Bold.woff2') format('woff2'), /* Modern Browsers */
-         url('/fonts/jager/Meister-Bold.woff') format('woff');
-    font-style: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
-}
