--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 @import url(https://use.typekit.net/vjs5ukg.css);/*!
- * Datepicker for Bootstrap v1.7.1 (https://github.com/uxsolutions/bootstrap-datepicker)
+ * Datepicker for Bootstrap v1.8.0 (https://github.com/uxsolutions/bootstrap-datepicker)
  *
  * Licensed under the Apache License v2.0 (http://www.apache.org/licenses/LICENSE-2.0)
  */
@@ -1404,7 +1404,7 @@ th {
 
 html {
   font-size: 10px;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -1425,13 +1425,13 @@ textarea {
 }
 
 a {
-  color: #ec008c;
+  color: #1A5276;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #a0005f;
+  color: #0c2637;
   text-decoration: underline;
 }
 
@@ -1700,12 +1700,12 @@ mark,
 }
 
 .text-primary {
-  color: #ec008c;
+  color: #1A5276;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #b9006e;
+  color: #11354c;
 }
 
 .text-success {
@@ -1749,12 +1749,12 @@ a.text-danger:focus {
 }
 
 .bg-primary {
-  background-color: #ec008c;
+  background-color: #1A5276;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #b9006e;
+  background-color: #11354c;
 }
 
 .bg-success {
@@ -3425,52 +3425,52 @@ input[type="search"] {
   }
 
   input[type="date"].input-sm,
-  .input-group-sm > input[type="date"].form-control,
-  .input-group-sm > input[type="date"].input-group-addon,
-  .input-group-sm > .input-group-btn > input[type="date"].btn,
+  .input-group-sm > input.form-control[type="date"],
+  .input-group-sm > input.input-group-addon[type="date"],
+  .input-group-sm > .input-group-btn > input.btn[type="date"],
   .input-group-sm input[type="date"],
   input[type="time"].input-sm,
-  .input-group-sm > input[type="time"].form-control,
-  .input-group-sm > input[type="time"].input-group-addon,
-  .input-group-sm > .input-group-btn > input[type="time"].btn,
+  .input-group-sm > input.form-control[type="time"],
+  .input-group-sm > input.input-group-addon[type="time"],
+  .input-group-sm > .input-group-btn > input.btn[type="time"],
   .input-group-sm
   input[type="time"],
   input[type="datetime-local"].input-sm,
-  .input-group-sm > input[type="datetime-local"].form-control,
-  .input-group-sm > input[type="datetime-local"].input-group-addon,
-  .input-group-sm > .input-group-btn > input[type="datetime-local"].btn,
+  .input-group-sm > input.form-control[type="datetime-local"],
+  .input-group-sm > input.input-group-addon[type="datetime-local"],
+  .input-group-sm > .input-group-btn > input.btn[type="datetime-local"],
   .input-group-sm
   input[type="datetime-local"],
   input[type="month"].input-sm,
-  .input-group-sm > input[type="month"].form-control,
-  .input-group-sm > input[type="month"].input-group-addon,
-  .input-group-sm > .input-group-btn > input[type="month"].btn,
+  .input-group-sm > input.form-control[type="month"],
+  .input-group-sm > input.input-group-addon[type="month"],
+  .input-group-sm > .input-group-btn > input.btn[type="month"],
   .input-group-sm
   input[type="month"] {
     line-height: 30px;
   }
 
   input[type="date"].input-lg,
-  .input-group-lg > input[type="date"].form-control,
-  .input-group-lg > input[type="date"].input-group-addon,
-  .input-group-lg > .input-group-btn > input[type="date"].btn,
+  .input-group-lg > input.form-control[type="date"],
+  .input-group-lg > input.input-group-addon[type="date"],
+  .input-group-lg > .input-group-btn > input.btn[type="date"],
   .input-group-lg input[type="date"],
   input[type="time"].input-lg,
-  .input-group-lg > input[type="time"].form-control,
-  .input-group-lg > input[type="time"].input-group-addon,
-  .input-group-lg > .input-group-btn > input[type="time"].btn,
+  .input-group-lg > input.form-control[type="time"],
+  .input-group-lg > input.input-group-addon[type="time"],
+  .input-group-lg > .input-group-btn > input.btn[type="time"],
   .input-group-lg
   input[type="time"],
   input[type="datetime-local"].input-lg,
-  .input-group-lg > input[type="datetime-local"].form-control,
-  .input-group-lg > input[type="datetime-local"].input-group-addon,
-  .input-group-lg > .input-group-btn > input[type="datetime-local"].btn,
+  .input-group-lg > input.form-control[type="datetime-local"],
+  .input-group-lg > input.input-group-addon[type="datetime-local"],
+  .input-group-lg > .input-group-btn > input.btn[type="datetime-local"],
   .input-group-lg
   input[type="datetime-local"],
   input[type="month"].input-lg,
-  .input-group-lg > input[type="month"].form-control,
-  .input-group-lg > input[type="month"].input-group-addon,
-  .input-group-lg > .input-group-btn > input[type="month"].btn,
+  .input-group-lg > input.form-control[type="month"],
+  .input-group-lg > input.input-group-addon[type="month"],
+  .input-group-lg > .input-group-btn > input.btn[type="month"],
   .input-group-lg
   input[type="month"] {
     line-height: 46px;
@@ -3598,9 +3598,9 @@ textarea.input-sm,
 .input-group-sm > textarea.input-group-addon,
 .input-group-sm > .input-group-btn > textarea.btn,
 select[multiple].input-sm,
-.input-group-sm > select[multiple].form-control,
-.input-group-sm > select[multiple].input-group-addon,
-.input-group-sm > .input-group-btn > select[multiple].btn {
+.input-group-sm > select.form-control[multiple],
+.input-group-sm > select.input-group-addon[multiple],
+.input-group-sm > .input-group-btn > select.btn[multiple] {
   height: auto;
 }
 
@@ -3654,9 +3654,9 @@ textarea.input-lg,
 .input-group-lg > textarea.input-group-addon,
 .input-group-lg > .input-group-btn > textarea.btn,
 select[multiple].input-lg,
-.input-group-lg > select[multiple].form-control,
-.input-group-lg > select[multiple].input-group-addon,
-.input-group-lg > .input-group-btn > select[multiple].btn {
+.input-group-lg > select.form-control[multiple],
+.input-group-lg > select.input-group-addon[multiple],
+.input-group-lg > .input-group-btn > select.btn[multiple] {
   height: auto;
 }
 
@@ -4094,29 +4094,29 @@ fieldset[disabled] .btn-default.focus {
 
 .btn-primary {
   color: #fff;
-  background-color: #ec008c;
-  border-color: #d3007d;
+  background-color: #1A5276;
+  border-color: #154361;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #b9006e;
-  border-color: #530031;
+  background-color: #11354c;
+  border-color: black;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #b9006e;
-  border-color: #950059;
+  background-color: #11354c;
+  border-color: #0a212f;
 }
 
 .btn-primary:active,
 .btn-primary.active,
 .open > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #b9006e;
-  border-color: #950059;
+  background-color: #11354c;
+  border-color: #0a212f;
 }
 
 .btn-primary:active:hover,
@@ -4129,8 +4129,8 @@ fieldset[disabled] .btn-default.focus {
 .open > .btn-primary.dropdown-toggle:focus,
 .open > .btn-primary.dropdown-toggle.focus {
   color: #fff;
-  background-color: #950059;
-  border-color: #530031;
+  background-color: #0a212f;
+  border-color: black;
 }
 
 .btn-primary:active,
@@ -4148,12 +4148,12 @@ fieldset[disabled] .btn-default.focus {
 fieldset[disabled] .btn-primary:hover,
 fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #ec008c;
-  border-color: #d3007d;
+  background-color: #1A5276;
+  border-color: #154361;
 }
 
 .btn-primary .badge {
-  color: #ec008c;
+  color: #1A5276;
   background-color: #fff;
 }
 
@@ -4418,7 +4418,7 @@ fieldset[disabled] .btn-danger.focus {
 }
 
 .btn-link {
-  color: #ec008c;
+  color: #1A5276;
   font-weight: normal;
   border-radius: 0;
 }
@@ -4442,7 +4442,7 @@ fieldset[disabled] .btn-link {
 
 .btn-link:hover,
 .btn-link:focus {
-  color: #a0005f;
+  color: #0c2637;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -4610,7 +4610,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #ec008c;
+  background-color: #1A5276;
 }
 
 .dropdown-menu > .disabled > a,
@@ -5113,7 +5113,7 @@ tbody.collapse.in {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #ec008c;
+  border-color: #1A5276;
 }
 
 .nav .nav-divider {
@@ -5173,7 +5173,7 @@ tbody.collapse.in {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #ec008c;
+  background-color: #1A5276;
 }
 
 .nav-stacked > li {
@@ -5694,8 +5694,8 @@ tbody.collapse.in {
 }
 
 .navbar-default {
-  background-color: #ec008c;
-  border-color: #cb0078;
+  background-color: #1A5276;
+  border-color: #143f5b;
 }
 
 .navbar-default .navbar-brand {
@@ -5726,7 +5726,7 @@ tbody.collapse.in {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #FFF;
-  background-color: #cb0078;
+  background-color: #143f5b;
 }
 
 .navbar-default .navbar-nav > .disabled > a,
@@ -5751,13 +5751,13 @@ tbody.collapse.in {
 
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #cb0078;
+  border-color: #143f5b;
 }
 
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  background-color: #cb0078;
+  background-color: #143f5b;
   color: #FFF;
 }
 
@@ -5776,7 +5776,7 @@ tbody.collapse.in {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #FFF;
-    background-color: #cb0078;
+    background-color: #143f5b;
   }
 
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
@@ -5977,7 +5977,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #ec008c;
+  color: #1A5276;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-left: -1px;
@@ -6001,7 +6001,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #a0005f;
+  color: #0c2637;
   background-color: #eeeeee;
   border-color: #ddd;
 }
@@ -6014,8 +6014,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 3;
   color: #fff;
-  background-color: #ec008c;
-  border-color: #ec008c;
+  background-color: #1A5276;
+  border-color: #1A5276;
   cursor: default;
 }
 
@@ -6163,12 +6163,12 @@ a.label:focus {
 }
 
 .label-primary {
-  background-color: #ec008c;
+  background-color: #1A5276;
 }
 
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #b9006e;
+  background-color: #11354c;
 }
 
 .label-success {
@@ -6240,7 +6240,7 @@ a.label:focus {
 
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #ec008c;
+  color: #1A5276;
   background-color: #fff;
 }
 
@@ -6344,7 +6344,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #ec008c;
+  border-color: #1A5276;
 }
 
 .alert {
@@ -6479,7 +6479,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #ec008c;
+  background-color: #1A5276;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -6665,8 +6665,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #ec008c;
-  border-color: #ec008c;
+  background-color: #1A5276;
+  border-color: #1A5276;
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -6684,7 +6684,7 @@ button.list-group-item {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #ffb9e3;
+  color: #7ab9e2;
 }
 
 .list-group-item-success {
@@ -7141,26 +7141,26 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-primary {
-  border-color: #ec008c;
+  border-color: #1A5276;
 }
 
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #ec008c;
-  border-color: #ec008c;
+  background-color: #1A5276;
+  border-color: #1A5276;
 }
 
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #ec008c;
+  border-top-color: #1A5276;
 }
 
 .panel-primary > .panel-heading .badge {
-  color: #ec008c;
+  color: #1A5276;
   background-color: #fff;
 }
 
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #ec008c;
+  border-bottom-color: #1A5276;
 }
 
 .panel-success {
@@ -7890,7 +7890,7 @@ button.close {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .carousel-control.left {
@@ -7979,7 +7979,7 @@ button.close {
   border-radius: 10px;
   cursor: pointer;
   background-color: #000 \9;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .carousel-indicators .active {
